create serverhandler function prototypes
